--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,9 @@
 name: Build C++ Project (Optional Testing Removed)
 on:
   push:
-    branches: [main]
-  pull_request:
-    branches: [main]
+    branches: [ main ]
+  pull_requests:
+    branches: [ main ]
 jobs:
   build:
     runs-on: ubuntu-latest
